@@ -1,4 +1,7 @@
-### Running configuration：
+# Nutllet
+This is a simple transaction management app on PC. Includes basic functions like record transactions and categorization. It is equipped with qwen2:1.5b AI model based on Ollama platform. Each function page is an individual java program.
+ 
+## Running configuration：
 
 **Overall：**
 
@@ -7,6 +10,17 @@
     jackson-2.15.3
     Ollama qwen2:1.5b
 
+**VM option: (As reference, need to replace with your own path)** 
+```
+--module-path
+"E:\Program Files\Java\javafx-sdk-21.0.6\lib"
+--add-modules
+javafx.controls,javafx.fxml,javafx.web
+--add-exports
+javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
+--add-exports
+javafx.web/com.sun.webkit=ALL-UNNAMED
+```
 **Detailed jars:**
 all extra jars are put aside in the `lib` folder.
 
@@ -29,7 +43,3 @@ all extra jars are put aside in the `lib` folder.
     
     poi-5.4.1.jar
     poi-ooxml-5.4.1.jar
-
-### Task Allocation within the Team
-
-Each member's code is in their respective named folder.​
